didn't have end video tag

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 kind="subtitles"
                 srclang="fr"
                 label="French Subtitles" />
+            </video>
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
     </main>
