--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
             <!-- TODO: Put the pigeons in love MP4 video here-->
             <video controls>
-                <source src="./assets/videos/pigeons-in-love.mp4">
+                <source src="./assets/videos/pigeons-in-love.mp4" type="video/mp4">
                 <track
                 src="./assets/text-tracks/pigeons-in-love-english.vtt"
                 kind="subtitles"
